Fixed issue 6980, handle empty load-on-startup element. Set the load-on-startup value as Integer.MAX_VALUE for empty load-on-startup element. Verified with the attached test case. Passed QL, deployment unit tests.
svn path=/trunk/; revision=25122


Former-commit-id: 5bec969dcc86e7151ac373f2e9ea9ad991f0e87d